# capnsnap

./: Cargo.toml  README.md  build.rs
schema/: snapshot.capnp
src/: main.rs
